--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -6,7 +6,8 @@
   justify-content: space-between;
   align-self: center;
   color: #66FCF1;
-  min-width: 320px;
+  width: 70%;
+  padding: 15px;
 }
 
 .hidden-tweet {
